# Altrus-ML-Model-V2

./: README.md  pyproject.toml
android_app/: README.md  buildozer.spec  main.py
mobile_web/: README.md  index.html  relay_server.py
src/: SOLID_APPLIED.md
src/altrus_cli/: __init__.py  cli.py  generator.py  runtime.py
src/altrus_cli/app/: scanner_app.py
src/altrus_cli/domain/: scanner_service.py
src/altrus_cli/infrastructure/: config_yaml.py  formatter.py  predictors.py  receivers.py
src/altrus_cli/ports/: interfaces.py
src/altrus_cli/tests/: test_config_reader.py  test_scanner_service.py
training_workspace/: README.md  TRAINING_GUIDE.md  train_models.py
