[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "altrus-cli"
version = "0.1.0"
description = "CLI to scaffold wristband sensor fusion anomaly detection projects."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Altrus" }
]

[project.scripts]
altrus = "altrus_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
